@@ -1,4 +1,8 @@
 2005-02-28 Magnus Hagdorn
+ * Makefile: quick hack to build a distribution tar-ball
+ * example.f90: check that all sections are used
+
+2005-02-28 Magnus Hagdorn
  * change names of config sections
 
 2005-02-26 Magnus Hagdorn
